# payments-service

./: .gitignore  .qodo.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/: main.py
src/routes/: health.py  payments.py
src/services/: payment_processor.py
src/utils/: formatting.py  validation.py
tests/: test_charge.py  test_formatting.py  test_validation.py
